--- a/trim/index.html
+++ b/trim/index.html
@@ -875,34 +875,25 @@
 	    		
                 <div class="col-md-6 appointment ftco-animate">
 	    			<h3 class="mb-3">Связаться с нами</h3>
-	    			<form action="#" class="appointment-form">
+
+                    <form action="#" class="appointment-form">
 	    				<div class="d-md-flex">
 		    				<div class="form-group">
-		    					<input type="text" class="form-control" placeholder="First Name">
+		    					<input type="text" class="form-control" placeholder="Ваше имя">
 		    				</div>
-		    				<div class="form-group ml-md-4">
-		    					<input type="text" class="form-control" placeholder="Last Name">
-		    				</div>
+
 	    				</div>
 	    				<div class="d-md-flex">
-		    				<div class="form-group">
-		    					<div class="input-wrap">
-		            		<div class="icon"><span class="ion-md-calendar"></span></div>
-		            		<input type="text" id="appointment_date" class="form-control" placeholder="Date">
-	            		</div>
+                            <div class="form-group">
+                                <input type="text" class="form-control" placeholder="E-mail">
+                            </div>
+		    				<div class="form-group  ml-md-4">
+		    					<input type="text" class="form-control" placeholder="Телефон">
 		    				</div>
-		    				<div class="form-group ml-md-4">
-		    					<div class="input-wrap">
-		            		<div class="icon"><span class="ion-ios-clock"></span></div>
-		            		<input type="text" id="appointment_time" class="form-control" placeholder="Time">
-	            		</div>
-		    				</div>
-		    				<div class="form-group ml-md-4">
-		    					<input type="text" class="form-control" placeholder="Phone">
-		    				</div>
+
 	    				</div>
 	    				<div class="form-group">
-	              <textarea name="" id="" cols="30" rows="3" class="form-control" placeholder="Message"></textarea>
+	              <textarea name="" id="" cols="30" rows="3" class="form-control" placeholder="Сообщение"></textarea>
 	            </div>
 	            <div class="form-group">
 	              <input type="submit" value="Отправить" class="btn btn-primary py-3 px-4">
