--- a/trim/kuhni.html
+++ b/trim/kuhni.html
@@ -54,14 +54,14 @@
 
                 </li>
                 <li class="nav-item has-children">
-                    <a href="gallery.html" class="nav-link">
+                    <a href="catalog.html" class="nav-link">
                         <i class="icon-chevron-down"></i>
                         Каталог
                     </a>
 
                     <ul class="sub-menu-main">
                         <li class="nav-item">
-                            <a href="data.html" class="nav-link">Кухни</a>
+                            <a href="kuhni.html" class="nav-link">Кухни</a>
                         </li>
                         <li class="nav-item">
                             <a href="#" class="nav-link">Шкафы-купе</a>
@@ -418,25 +418,40 @@
 
             <div class="col-md-4 sidebar ftco-animate">
 
+                <!-- Search block -->
+                <div class="sidebar-box">
+                    <form action="#" class="search-form">
+                        <div class="form-group">
+                            <div class="icon">
+                                <span class="icon-search"></span>
+                            </div>
+                            <input type="text" class="form-control" placeholder="Поиск...">
+                        </div>
+                    </form>
+                </div>
+
                 <div class="sidebar-box ftco-animate ">
                     <div class="categories ">
                         <h3>Разделы</h3>
-                        <ul class="">
+                        <ul class="parent-ul">
                             <li class="nav-item"><a href="kuhni.html">Угловые кухни<span>(12)</span></a></li>
                             <li class="nav-item"><a href="about.html">Прямые кухни<span>(12)</span></a></li>
                             <li class="nav-item has-children">
                                 <a href="2.html">Кухни с ДСП<span>(2)</span></a>
-                                <ul class="">
+                                <ul class="sub-menu">
                                     <li><a href="#">Boyard<span>(3)</span></a></li>
                                     <li class="nav-item has-children">
                                         <a href="egge2r.html">Egger<span>(4)</span></a>
-                                            <ul  class="">
+                                            <ul  class="sub-menu">
+                                                <li><a href="1231">AKS<span>(9)</span></a></li>
                                                 <li class="nav-item has-children">
-                                                    <a href ="egger.html">EGGER<span>(8)</span></a>
-                                                        <ul class="">
+
+                                                    <a href ="#">CLEAF<span>(8)</span></a>
+                                                        <ul class="sub-menu">
                                                             <li>
-                                                                <a href="aks.html">AKS<span>(9)</span></a>
+                                                                <a href="kuhni.html">blum<span>(9)</span></a>
                                                             </li>
+                                                            <li><a href="54">AKS<span>(9)</span></a></li>
                                                         </ul>
                                                 </li>
                                             </ul>
@@ -446,39 +461,43 @@
                             <li class="nav-item"><a href="gallery.html">Кухни с остравом Кухни с остравом<span>(18)</span></a></li>
                             <li class="nav-item"><a href="blog.html">Белые кухни<span>(8)</span></a></li>
                             <li class="nav-item"><a href="contact.html">Кухни из мдф<span>(10)</span></a></li>
-                            <li class="nav-item">
+                            <li class="nav-item has-children">
                                 <a href="contact.html">Маленькие кухни<span>(3)</span></a>
-                                <ul class="">
+                                <ul class="sub-menu">
                                     <li>
                                         <a href="#">На дачу<span>(6)</span></a>
                                     </li>
                                     <li>
-                                        <a href="#">В квартиру<span>(9)</span></a>
+                                        <a href="kuhni.html">В квартиру<span>(9)</span></a>
                                     </li>
                                 </ul>
                             </li>
                         </ul>
                     </div>
                 </div>
-                <div class="sidebar-box ftco-animate">
+
+                <div class="sidebar-box ftco-animate ">
                     <div class="categories">
                         <h3>Каталог</h3>
-                        <li><a href="#">Кухни <span>(12)</span></a></li>
-                        <li><a href="#">Шкафы <span>(22)</span></a></li>
-                        <li><a href="#">Комоды <span>(37)</span></a></li>
-                        <li><a href="#">Гостиные <span>(42)</span></a></li>
-                        <li><a href="#">Прихожие <span>(14)</span></a></li>
-                        <li><a href="#">Лофт <span>(140)</span></a></li>
-                        <li><a href="#">Офисная мебель <span>(140)</span></a></li>
+                        <ul class="parent-ul">
+                            <li><a href="kuhni.html">Кухни <span>(12)</span></a></li>
+                            <li><a href="#">Шкафы <span>(22)</span></a></li>
+                            <li><a href="#">Комоды <span>(37)</span></a></li>
+                            <li><a href="#">Гостиные <span>(42)</span></a></li>
+                            <li><a href="#">Прихожие <span>(14)</span></a></li>
+                            <li><a href="#">Лофт <span>(140)</span></a></li>
+                            <li><a href="#">Офисная мебель <span>(140)</span></a></li>
+                        </ul>
                     </div>
                 </div>
-                <div class="sidebar-box ftco-animate">
+
+                <div class="sidebar-box ftco-animate ">
                     <div class="">
                         <h3>Курсы валют</h3>
                         <ul>
-                            <li><span>USD - 2.8</span></li>
-                            <li><span>EUR - 3.2</span></li>
-                            <li><span>RUB - 3.5</span></li>
+                            <li><span>USD - 2.8344</span></li>
+                            <li><span>EUR - 3.2124</span></li>
+                            <li><span>RUB - 3.5121</span></li>
                         </ul>
                         <p>Курсы валют на 25.08.2020</p>
                         <p>Полседнее обновление 15:00</p>
@@ -539,16 +558,7 @@
                     </div>
                 </div>
 
-                <div class="sidebar-box">
-                    <form action="#" class="search-form">
-                        <div class="form-group">
-                            <div class="icon">
-                                <span class="icon-search"></span>
-                            </div>
-                            <input type="text" class="form-control" placeholder="Search...">
-                        </div>
-                    </form>
-                </div>
+
 
 
 
@@ -791,31 +801,34 @@
 
             <div class="offcanvas-navigation__top">
                 <ul class="offcanvas-menu">
-                    <li class="nav-item"><a href="kuhni.html">Угловые кухни</a></li>
-                    <li class="nav-item"><a href="about.html">Прямые кухни</a></li>
+                    <li class="nav-item"><a href="kuhni.html">Угловые кухни Угловые кухни</a><span>(4)</span></li>
+                    <li class="nav-item"><a href="about.html">Прямые кухни</a><span>(3)</span></li>
                     <li class="nav-item has-children" >
-                        <a href="2.html">Кухни с ДСП</a>
+                        <a href="2.html">Кухни с ДСП</a><span>(4)</span>
                         <ul class="">
                             <li>
-                                <a href="egge2r.html">Egger</a>
-                                <ul><li><a href ="egger.html">EGGER</li></ul>
+                                <a href="egge2r.html">Egger</a><span>(4)</span>
+                                <ul><li><a href ="egger.html">EGGER</a><span>(4)</span></li></ul>
                             </li>
                             <li>
                                 <a href="#">Boyard</a>
+                                <span>(4)</span>
                             </li>
                         </ul>
                     </li>
-                    <li class="nav-item"><a href="gallery.html">Кухни с остравом</a></li>
-                    <li class="nav-item"><a href="blog.html">Белые кухни</a></li>
-                    <li class="nav-item"><a href="contact.html">Кухни из мдф</a></li>
+                    <li class="nav-item"><a href="gallery.html">Кухни с остравом</a><span>(4)</span></li>
+                    <li class="nav-item"><a href="blog.html">Белые кухни</a><span>(4)</span></li>
+                    <li class="nav-item"><a href="contact.html">Кухни из мдф</a><span>(4)</span></li>
                     <li class="nav-item">
-                        <a href="contact.html">Маленькие кухни</a>
+                        <a href="contact.html">Маленькие кухни</a><span>(18)</span>
                         <ul class="">
                             <li>
                                 <a href="#">На дачу</a>
+                                <span>(4)</span>
                             </li>
                             <li>
                                 <a href="#">В квартиру</a>
+                                <span>(4)</span>
                             </li>
                         </ul>
                     </li>
