--- a/trim/services.html
+++ b/trim/services.html
@@ -279,7 +279,7 @@
 	          </div> <!-- .col-md-8 -->
 
 
-	          <div class="col-md-4 sidebar ftco-animate sidebar-1">
+	          <div class="col-md-4 sidebar ftco-animate">
 	            
 	            <div class="sidebar-box ftco-animate">
 	              <div class="">
