--- a/trim/kuhni.html
+++ b/trim/kuhni.html
@@ -32,7 +32,10 @@
 <!--Start nav MENU -->
 <nav  class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
     <div class="container">
-        <a class="navbar-brand" href="index.html">SV-KUPE</a>
+        <a class="navbar-brand" href="index.html">
+            <img class="img-brand" src="img/cropped-favicon-270x270.png">
+            SV-KUPE
+        </a>
         <button class="navbar-toggler" type="button">
             <div class="icon nav-icon-4">
                 <span></span>
@@ -96,7 +99,7 @@
 <!-- END nav -->
 
 <!-- Header Slide Parallax-->
-<div class="hero-wrap" data-speed="0.2" data-image-src='images/5.jpg' data-parallax="scroll" data-android-fix="true" dara-ios-fix="true">
+<div class="hero-wrap" data-speed="0.2" data-image-src='img/44.jpg' data-parallax="scroll" data-android-fix="true" dara-ios-fix="true">
     <div class="overlay"></div>
     <div class="container">
         <div class="row no-gutters slider-text align-items-center justify-content-center" data-scrollax-parent="true">
