--- a/trim/single-catalog.html
+++ b/trim/single-catalog.html
@@ -35,7 +35,10 @@
 <!--Start nav MENU -->
 <nav  class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
     <div class="container">
-        <a class="navbar-brand" href="index.html">SV-KUPE</a>
+        <a class="navbar-brand" href="index.html">
+            <img class="img-brand" src="img/cropped-favicon-270x270.png">
+            SV-KUPE
+        </a>
         <button class="navbar-toggler" type="button">
             <div class="icon nav-icon-4">
                 <span></span>
@@ -57,14 +60,14 @@
 
                 </li>
                 <li class="nav-item has-children">
-                    <a href="gallery.html" class="nav-link">
+                    <a href="catalog.html" class="nav-link">
                         <i class="icon-chevron-down"></i>
                         Каталог
                     </a>
 
                     <ul class="sub-menu-main">
                         <li class="nav-item">
-                            <a href="data.html" class="nav-link">Кухни</a>
+                            <a href="kuhni.html" class="nav-link">Кухни</a>
                         </li>
                         <li class="nav-item">
                             <a href="#" class="nav-link">Шкафы-купе</a>
