--- a/trim/blog.html
+++ b/trim/blog.html
@@ -129,7 +129,7 @@
 	                  <div><a href="#">Sept 10, 2018</a></div>
 	                  
 	                </div>
-	                <h3 class="heading mt-2"><a href="#">Мебель в стиле ЛОФТ</a></h3>
+	                <h3 class="heading mt-2"><a href="blog-single.html">Мебель в стиле ЛОФТ</a></h3>
 	                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
 	              </div>
 	            </div>
@@ -152,7 +152,7 @@
 
 	          <div class="col-md-4 d-flex ftco-animate">
 	          	<div class="blog-entry align-self-stretch">
-	              <a href="blog-single.html" class="block-20" style="background-image: url('img/8.jpg');">
+	              <a href="blog/blog-single3.html" class="block-20" style="background-image: url('img/8.jpg');">
 	              </a>
 	              <div class="text py-4 d-block">
 	              	<div class="meta">
@@ -448,7 +448,7 @@
 	  <script src="js/google-map.js"></script>
 	  <script src="js/main.js"></script>
 	  <!-- My Custom File -->
-  		<script src="js/atlas.js"></script>  
+  		<script src="js/atlas.js"></script>
   		<!-- Simple Parallax Effect для фона-->
   		<script src="js/parallax.min.js"></script>
 	  </body>
