--- a/trim/about.html
+++ b/trim/about.html
@@ -253,22 +253,59 @@
 	</div>
 	
 </section>
+<section class="ftco-section ftco-discount img" style="background-image: url(img/48.jpg);" data-stellar-background-ratio="0.5">
+	<div class="overlay"></div>
+		<div class="container">
+			<div class="row justify-content-center">
 
+				<div class="col-md-3 text-center discount ftco-animate">
+					<div class="media d-block text-center block-6 services">
 
-	    <section class="ftco-section ftco-discount img" style="background-image: url(img/loft.jpg);" data-stellar-background-ratio="0.5">
-				<div class="overlay"></div>
-				<div class="container">
-					<div class="row justify-content-center" data-scrollax-parent="true">
-						<div class="col-md-7 text-center discount ftco-animate" data-scrollax=" properties: { translateY: '-30%'}">
-							<h3>Современное направление</h3>
-							<h2 class="mb-4">Мебель в стиле ЛОФТ</h2>
-							<p class="mb-4" style="color: #d6d3d3;">Основные материалы дизайна – металл, дерево и стекло.</p>
-							
-							<p><a href="#" class="btn btn-primary px-4 py-3">Подробнее</a></p>
+						<div class="icon d-flex justify-content-center align-items-center mb-4 mt-4">
+							<span>20</span>
+						</div>
+
+						<div class="media-body">
+							<h3 class="heading">Лет на рынке корпусной мебели</h3>
+						</div>
+
+					</div>
+				</div>
+
+				<div class="col-md-3 text-center discount ftco-animate">
+					<div class="media d-block text-center block-6 services">
+						<div class="icon d-flex justify-content-center align-items-center mb-4 mt-4">
+							<span class="">24</span>
+						</div>
+						<div class="media-body">
+							<h3 class="heading">Месяцев гарантия</h3>
+						</div>
+					</div>
+
+				</div>
+				<div class="col-md-3 text-center discount ftco-animate">
+					<div class="media d-block text-center block-6 services">
+						<div class="icon d-flex justify-content-center align-items-center mb-4 mt-4">
+							<span class="">0%</span>
+						</div>
+						<div class="media-body">
+							<h3 class="heading">Рассрочка</h3>
 						</div>
 					</div>
 				</div>
-			</section>
+				<div class="col-md-3 text-center discount ftco-animate">
+					<div class="media d-block text-center block-6 services">
+						<div class="icon d-flex justify-content-center align-items-center mb-4 mt-4">
+							<span class="">5%</span>
+						</div>
+						<div class="media-body">
+							<h3 class="heading">Скидка на второй и последующие заказы</h3>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+</section>
 
 
 	    <section class="ftco-section">
