--- a/trim/index.html
+++ b/trim/index.html
@@ -107,10 +107,10 @@
         	    </div>
 	       </nav>
     <!-- END nav -->
-    
+
     <!-- Header Slide Parallax-->
     <section>
-    <div class="hero-wrap js-fullheight parallax" data-speed="0.2" data-image-src='images/2.jpg' data-parallax="scroll" data-android-fix="true" dara-ios-fix="true">
+    <div class="hero-wrap js-fullheight parallax parallaxie" style="background-image: url('images/2.jpg');">
       <div class="overlay"></div>
 
       <div class="container">
@@ -563,7 +563,7 @@
 </section>
 
 <section>
-        <div class="parallax" data-speed="0.1" data-image-src='img/loft.jpg' data-parallax="scroll" data-android-fix="true" dara-ios-fix="true">
+        <div class="parallax parallaxie" data-speed="0.1" style="background-image: url('img/loft.jpg');">
             <div class="overlay"></div>
             <div class="container">
                 <div class="row justify-content-center p-5" >
@@ -615,7 +615,7 @@
         </div>
     </section>
 <!-- ДОСТИЖЕНИЯ -->
-<section class="ftco-counter ftco-bg-dark img" id="section-counter" style="background-image: url(img/sv7.jpeg);" data-stellar-background-ratio="0.5">
+<section class="ftco-counter ftco-bg-dark img parallaxie" id="section-counter" style="background-image: url(img/sv7.jpeg);">
             <div class="overlay"></div>
 
             <div class="container">
@@ -750,7 +750,7 @@
 
 
     <section>
-        <div class="parallax" data-speed="0.1" data-image-src='img/iskus.jpg' data-parallax="scroll" data-android-fix="true" dara-ios-fix="true">
+        <div class="parallax parallaxie" style="background-image: url('img/iskus.jpg');">
             <div class="overlay"></div>
             <div class="container">
                 <div class="row justify-content-center p-5">
