--- a/trim/index.html
+++ b/trim/index.html
@@ -127,7 +127,7 @@
                     <a href="catalog.html" class="btn btn-primary px-4 py-3">Каталог проектов</a>
                 </p>
           </div>
-            <div class="col-md-6 d-flex justify-content-center align-items-center ftco-animate">
+            <div class="col-md-6 d-none d-md-flex d-xl-flex d-lg-flex justify-content-center ftco-animate block-feedback">
                 <div>
                     <a data-toggle="modal" data-target="#feedBackForm" class="icon d-flex justify-content-center align-items-center">
                         <span class="icon-mail_outline"></span>
@@ -137,58 +137,60 @@
             </div>
         </div>
       </div>
+
+
+        <div class="ftco-intro block-contact">
+            <div class="container-wrap">
+                <div class="wrap d-md-flex align-items-end">
+                    <div class="info">
+                        <div class="row no-gutters">
+
+                            <div class="col-md-4 d-flex ftco-animate">
+                                <div class="icon"><span class="icon-phone"></span></div>
+                                <div class="text">
+                                    <h3>+375 (29) 7925779</h3>
+                                    <h3>+375 (29) 5506565</h3>
+                                    <p>Консультация: с 9.00 до 20.00</p>
+                                </div>
+                            </div>
+
+                            <div class="col-md-4 d-flex ftco-animate">
+                                <div class="icon"><span class="icon-my_location"></span></div>
+                                <div class="text">
+                                    <h3>г. Брест, ГОБК бывший в/г №1 "Крепость", строение 95</h3>
+                                    <p>Въезд через Северные ворота</p>
+                                </div>
+                            </div>
+
+                            <div class="col-md-4 d-flex ftco-animate">
+                                <div class="icon"><span class="icon-clock-o"></span></div>
+                                <div class="text">
+                                    <h3>Открыты Пн.- Пт.</h3>
+                                    <p>9:00 - 17:30</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="social pl-md-5 p-4">
+                        <ul class="social-icon">
+                            <li class="ftco-animate">
+                                <a href="#"><span class="icon-vk"></span></a>
+                            </li>
+                            <li class="ftco-animate">
+                                <a href="#"><span class="icon-instagram"></span></a>
+                            </li>
+                            <li class="ftco-animate">
+                                <a href="#" data-toggle="modal" data-target="#callBack"><span class="icon-phone2"></span></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     </section>
     <!-- End Header Slide Parallax -->
 
-    <section class="ftco-intro">
-    	<div class="container-wrap">
-    		<div class="wrap d-md-flex align-items-end">
-	    		<div class="info">
-	    			<div class="row no-gutters">
-
-                        <div class="col-md-4 d-flex ftco-animate">
-	    					<div class="icon"><span class="icon-phone"></span></div>
-	    					<div class="text">
-	    						<h3>+375 (29) 7925779</h3>
-                                <h3>+375 (29) 5506565</h3>
-	    						<p>Консультация: с 9.00 до 20.00</p>
-	    					</div>
-	    				</div>
-
-                        <div class="col-md-4 d-flex ftco-animate">
-	    					<div class="icon"><span class="icon-my_location"></span></div>
-	    					<div class="text">
-	    						<h3>г. Брест, ГОБК бывший в/г №1 "Крепость", строение 95</h3>
-	    						<p>Въезд через Северные ворота</p>
-	    					</div>
-	    				</div>
-
-                        <div class="col-md-4 d-flex ftco-animate">
-	    					<div class="icon"><span class="icon-clock-o"></span></div>
-	    					<div class="text">
-	    						<h3>Открыты Пн.- Пт.</h3>
-	    						<p>9:00 - 17:30</p>
-	    					</div>
-	    				</div>
-	    			</div>
-	    		</div>
-    	    		<div class="social pl-md-5 p-4">
-        	    			<ul class="social-icon">
-                                <li class="ftco-animate">
-                                    <a href="#"><span class="icon-vk"></span></a>
-                                </li>
-                                <li class="ftco-animate">
-                                    <a href="#"><span class="icon-instagram"></span></a>
-                                </li>
-                                <li class="ftco-animate">
-                                    <a href="#" data-toggle="modal" data-target="#callBack"><span class="icon-phone2"></span></a>
-                                </li>
-                            </ul>
-    	    		</div>
-    		</div>
-    	</div>
-    </section>
 
  <section class="ftco-gallery">
             <div class="container">
