--- a/trim/kuhni.html
+++ b/trim/kuhni.html
@@ -26,6 +26,9 @@
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <!--Favicon -->
+    <link rel="shortcut icon" href="img/cropped-favicon-32x32.png" type="image/png">
 </head>
 <body>
 
@@ -41,11 +44,10 @@
                 <span></span>
                 <span></span>
                 <span></span>
-                <div>
+            </div>
         </button>
-
         <div class="collapse navbar-collapse" id="ftco-nav">
-            <ul class="navbar-nav ml-auto">
+            <ul class="navbar-nav ml-auto js-clone-nav">
                 <li class="nav-item">
 
 
@@ -79,7 +81,14 @@
                         <li class="nav-item">
                             <a href="#" class="nav-link">Горки
                             </a>
-
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Гостиные
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Горки
+                            </a>
                         </li>
                     </ul>
 
@@ -98,8 +107,62 @@
 </nav>
 <!-- END nav -->
 
+<!-- Mobile OffCanvas Menu Start -->
+<section>
+    <aside class="offcanvas-navigation">
+        <div class="offcanvas-navigation__inner">
+            <!-- LOGO -->
+            <div class="logo-cavnas" >
+                <div>
+                    <span class="namefirm">Ателье мебели СВ-Купе</span>
+                </div>
+            </div>
+            <!-- button close -->
+            <div class="close-button">
+                <a href="" class="btn-close">
+                    <i class="fa fa-times" aria-hidden="true"></i>
+                    <span class="sr-only">Close Offcanvas Navigtion</span>
+                </a>
+            </div>
+
+            <div class="offcanvas-navigation__top menu-clone"></div>
+
+            <div class="off-con">
+                <p class="namefirm">Связаться с нами</p>
+
+                <ul class="offcanvas-menu" >
+                    <li>
+                        <div class="social-icon d-flex">
+                            <div><a href="#"><i class="fa fa-vk" aria-hidden="true"></i></a></div>
+                            <div><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i> </a></div>
+                            <div><a href="#"><i class="fa fa-telegram" aria-hidden="true"></i></a></div>
+
+                        </div>
+                    </li>
+                    <li>
+                        <a href="tel://+375297925779">
+                            <i class="fa fa-phone" aria-hidden="true"></i>
+                            +375 (29) 792-57-79</a>
+                    </li>
+                    <li>
+                        <a href="tel://+375295506565">
+                            <i class="fa fa-phone" aria-hidden="true"></i>
+                            +375 (29) 550-65-65</a>
+                    </li>
+                    <li><a href="mailto:sv-ceh@tut.by">
+                        <i class="fa fa-envelope" aria-hidden="true"></i>
+                        sv-ceh@tut.by</a>
+                    </li>
+                </ul>
+
+            </div>
+        </div>
+    </aside>
+</section>
+<!-- Mobile Menu End -->
+
 <!-- Header Slide Parallax-->
-<div class="hero-wrap" data-speed="0.2" data-image-src='img/44.jpg' data-parallax="scroll" data-android-fix="true" dara-ios-fix="true">
+<div class="hero-wrap js-fullheight parallax parallaxie"  style="background-image: url('img/44.jpg');">
     <div class="overlay"></div>
     <div class="container">
         <div class="row no-gutters slider-text align-items-center justify-content-center" data-scrollax-parent="true">
@@ -133,24 +196,18 @@
     <div class="container">
         <div class="row">
             <div class="col-md-8">
-
-
                 <div class="container-wrap">
                     <div class="row justify-content-center">
-
                         <div class="col-6 col-md-6 mb-3  w-5">
                             <div class="border-a ftco-animate items blog-entry">
-
                                 <div class="item-img text-center">
                                     <a href="single-catalog.html" >
                                         <img  class="img-fluid" src="img/1.jpg">
                                     </a>
                                 </div>
-
                                 <div class="col-md-12 cash-s ftco-animate">
                                     <p>Цена: <i class="icon-usd"></i> 123</p>
                                 </div>
-
                                 <div class="col-md-12 text d-block" >
                                     <div class="meta" >
                                         <div>Sept 10, 2018</div>
@@ -592,10 +649,8 @@
 </section> <!-- .section -->
 
 <footer class="ftco-footer ftco-section img">
-    <div class="overlay"></div>
     <div class="container">
-        <div class="row mb-5">
-
+        <div class="row mb-3">
             <div class="col-md-2">
                 <div class="ftco-footer-widget mb-4 ml-md-4">
                     <h2 class="ftco-heading-2">Меню</h2>
@@ -607,8 +662,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-md-3">
-
+            <div class="col-md-4">
                 <div class="ftco-footer-widget mb-5">
                     <h2 class="ftco-heading-2">Последние новости</h2>
 
@@ -618,11 +672,9 @@
                             <h3 class="heading"><a href="#">Мебель в стиле ЛОФТ</a></h3>
                             <div class="meta">
                                 <div><a href="#"><span class="icon-calendar"></span> Sept 15, 2018</a></div>
-
                             </div>
                         </div>
                     </div>
-
                     <div class="block-21 mb-6 d-flex">
                         <a class="blog-img mr-4" style="background-image: url(img/7.jpg);"></a>
                         <div class="text">
@@ -634,7 +686,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-3">
                 <div class="ftco-footer-widget mb-4">
                     <h2 class="ftco-heading-2">О нас</h2>
                     <p>Огрымный опыт работы позволяет нам реализовать современные,
@@ -642,10 +694,6 @@
 
                 </div>
             </div>
-
-
-
-
             <div class="col-md-3">
                 <div class="ftco-footer-widget mb-4">
                     <h2 class="ftco-heading-2">У вас есть вопросы?</h2>
@@ -669,109 +717,20 @@
                     </ul>
                 </div>
             </div>
-
         </div>
-
-        <div class="row">
-            <div class="col-md-12 text-center">
-                <p>Copyright &copy; atlas&Co. Все права защищены</p>
-            </div>
-        </div>
-
+    </div>
+    <div class="text-center copyright-botton pb-3 pt-3 pr-1 pl-1">
+        <p class="m-0">Copyright &copy; atlas&Co. Все права защищены</p>
     </div>
 </footer>
 
 
 
+
 <!-- loader -->
 <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
-<!-- OffCanvas Menu Start -->
-<section>
-    <aside class="offcanvas-navigation" id="offcanvasnav">
 
-        <div class="offcanvas-navigation__inner">
-            <!-- LOGO -->
-            <div class="logo-cavnas" >
-                <div>
-                                <span class="namefirm">
-                                    <i class="icon-quote-left"></i>
-                                        Ателье мебели СВ-Купе
-                                    <i class="icon-quote-right"></i></span>
-                </div>
-            </div>
-            <!-- button close -->
-            <div class="close-button">
-                <a href="" class="btn-close" style="font-size: 36px;">
-                    <i class="icon-cancel"></i>
-                    <span class="sr-only">Close Offcanvas Navigtion</span>
-                </a>
-            </div>
 
-            <div class="offcanvas-navigation__top">
-                <ul class="offcanvas-menu">
-                    <li class="nav-item"><a href="index.html" >Главная</a></li>
-                    <li class="nav-item"><a href="about.html" >О компании</a></li>
-                    <li class="nav-item has-children" >
-                                                <span class="menu-expand">
-                                                    <i class="icon-chevron-down"></i>
-                                                </span>
-                        <a href="catalog.html">Каталог</a>
-                        <ul class="sub-menu">
-                            <li>
-                                <a href="kuhni.html">Кухни</a>
-                            </li>
-                            <li>
-                                <a href="#">Шкафы</a>
-                            </li>
-                            <li>
-                                <a href="#">Офисная мебель</a>
-                            </li>
-                            <li>
-                                <a href="#">Комоды</a>
-                            </li>
-                            <li>
-                                <a href="#">Гардеробные</a>
-                            </li>
-                            <li>
-                                <a href="#">Ванные комнаты</a>
-                            </li>
-                            <li>
-                                <a href="#">Столы</a>
-                            </li>
-                            <li>
-                                <a href="#">Детские комнаты</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="nav-item"><a href="gallery.html" >Клиента & Партнерам</a></li>
-                    <li class="nav-item"><a href="blog.html" >Блог</a></li>
-                    <li class="nav-item"><a href="contact.html">Контакты</a></li>
-                </ul>
-            </div>
-
-            <div class="off-con">
-                <p class="namefirm">Связаться с нами</p>
-                <ul class="offcanvas-menu " >
-                    <li>
-                        <a href="tel://+375297925779"><span class=" icon-phone"></span>
-                            +375(29)792-57-79</a>
-                    </li>
-                    <li>
-                        <a href="tel://+375295506565">
-                            <span class=" icon-phone"></span>
-                            +375(29)550-65-65</a>
-                    </li>
-                    <li><a href="mailto:sv-ceh@tut.by">
-                        <span class=" icon-envelope"></span>
-                        sv-ceh@tut.by</a>
-                    </li>
-                </ul>
-
-            </div>
-        </div>
-    </aside>
-</section>
-<!-- OffCanvas Menu End -->
 <!-- Qicuk View Modal End -->
 <!-- Global Overlay Start -->
 <div class="global-overlay"></div>
@@ -786,7 +745,7 @@
 <!--Scroll to Top END -->
 <!-- SubMenu for Catalog Offcavnas-->
 <section>
-    <aside class="offcanvas-submenu-navigation" id="offcanvasnav">
+    <aside class="offcanvas-submenu-navigation">
         <div class="offcanvas-navigation__inner">
             <!-- LOGO -->
             <div class="logo-cavnas" >
@@ -808,7 +767,7 @@
                     <li class="nav-item"><a href="about.html">Прямые кухни</a><span>(3)</span></li>
                     <li class="nav-item has-children" >
                         <a href="2.html">Кухни с ДСП</a><span>(4)</span>
-                        <ul class="">
+                        <ul class="sub-menu">
                             <li>
                                 <a href="egge2r.html">Egger</a><span>(4)</span>
                                 <ul><li><a href ="egger.html">EGGER</a><span>(4)</span></li></ul>
@@ -866,6 +825,8 @@
 <script src="js/main.js"></script>
 <!-- Simple Parallax Effect для фона-->
 <script src="js/parallax.min.js"></script>
+<!--  Parallaxie для фона-->
+<script src="js/parallaxie.js"></script>
 <!-- My Custom File -->
 <script src="js/atlas.js"></script>
 
